--- a/index.html
+++ b/index.html
@@ -3,36 +3,92 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Crypto Card Ranker</title>
+  <title>Daedalus — Crypto Card Ranker</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/styles.css">
+  <style>
+    /* hide legacy controls safely so JS can still find the nodes */
+    .hidden-compat { display:none !important; }
+    /* tiny gap between search and sort pills if needed */
+    .filters { gap: 10px; }
+
+    /* --- Footer (center content, pull button in from edge) --- */
+    .site-footer{ border-top:1px solid rgba(255,255,255,.06); background:var(--bg); margin-top:24px; }
+    .footer-inner{
+      position: relative;                      /* allows absolute positioning of the button */
+      display:flex; align-items:center;
+      justify-content:center;                  /* center the credits */
+      gap:12px; padding:18px 24px;
+      color:#bdbdbd; font-size:12px;
+    }
+    .foot-credits{
+      text-align:center; color:#dcdcdc; font-weight:600; letter-spacing:.2px;
+    }
+    .foot-credits a{
+      color:#ffffff; text-decoration:underline; text-underline-offset:3px;
+    }
+    .foot-credits a:hover{ opacity:.9; }
+
+    .foot-link{
+      color:#dcdcdc; text-decoration:none;
+      border:1px solid rgba(255,255,255,.18);
+      padding:6px 10px; border-radius:999px;
+      backdrop-filter: blur(4px);
+    }
+    .foot-link:hover{ background:rgba(255,255,255,.06); }
+    .foot-right{
+      position:absolute; right:56px;           /* inset the pill from the edge */
+      top:50%; transform: translateY(-50%);    /* vertically center inside footer */
+    }
+    @media (max-width:640px){
+      .footer-inner{ padding:16px; }
+      .foot-right{ right:16px; }
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <div class="header-inner">
-      <div class="brand">⚡ Crypto Card Ranker</div>
-      <div class="hint">Live data from your Google Sheet</div>
-    </div>
-    <div class="controls">
-      <div class="control"><label for="search">Search</label><input id="search" placeholder="Search cards, issuers, countries..." /></div>
-      <div class="control"><label for="issuer">Issuer</label><select id="issuer"></select></div>
-      <div class="control"><label for="network">Network</label><select id="network"></select></div>
-      <div class="control"><label for="country">Country</label><select id="country"></select></div>
-      <div class="control"><label for="sort">Sort by</label><select id="sort"></select></div>
-    </div>
-    <div class="toolbar">
-      <div class="meta" id="meta">Loading…</div>
-      <div style="display:flex; gap:8px; align-items:center;">
-        <button class="btn" id="reload">Reload</button>
-        <button class="btn" id="runTests" title="Run built-in tests">Run Tests</button>
-        <a id="sheetLink" class="meta" target="_blank" rel="noopener">Open Sheet ↗</a>
+
+  <!-- Brand hero (monochrome). Set your banner/logo files in /assets -->
+  <header class="site-header" style="--hero-url:url('./assets/brand-hero.jpg')">
+    <div class="hero">
+      <div class="brandline">
+        <img class="brandmark" src="./assets/brand-mark.png" alt="Daedalus" onerror="this.style.display='none'">
+        <img class="wordlogo" src="./assets/daedalus-logo.png" alt="Daedalus logo" />
       </div>
+      <p class="tag">Crypto Card Ranker</p>
+    </div>
+
+    <!-- Filters: Search + Sort visible; all other controls kept hidden for JS compatibility -->
+    <div class="filters">
+      <!-- search (visible) -->
+      <div class="control control-search">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <path d="M21 21l-4.3-4.3" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2"/>
+        </svg>
+        <input id="search" placeholder="Search cards, issuers, countries…" />
+      </div>
+
+      <!-- sort (visible) -->
+      <div class="control control-sort">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <path d="M6 4v14m0 0l-3-3m3 3l3-3M18 20V6m0 0l3 3m-3-3l-3 3"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <select id="sort" aria-label="Sort by"></select>
+      </div>
+
+      <!-- legacy controls (hidden but present so JS doesn’t throw) -->
+      <div class="control hidden-compat"><label for="issuer">Issuer</label><select id="issuer"></select></div>
+      <div class="control hidden-compat"><label for="network">Network</label><select id="network"></select></div>
+      <div class="control hidden-compat"><label for="country">Country</label><select id="country"></select></div>
+      <button class="btn ghost hidden-compat" id="reload" title="Reload">Reload</button>
+      <button class="btn ghost hidden-compat" id="runTests" title="Run built-in tests">Tests</button>
+      <a id="sheetLink" class="meta link-quiet hidden-compat" target="_blank" rel="noopener">Sheet ↗</a>
     </div>
   </header>
-
-  <div id="status" class="status" aria-live="polite"></div>
 
   <main class="container">
     <div id="grid" class="grid" aria-live="polite"></div>
@@ -40,10 +96,24 @@
     <div id="error" class="error" style="display:none;">Couldn't load the sheet. Check the publish link or CORS settings.</div>
   </main>
 
-  <details class="diag">
+  <!-- diagnostics kept but hidden so setDiag() doesn’t fail -->
+  <details class="diag hidden-compat">
     <summary>Diagnostics</summary>
     <pre id="diag"></pre>
   </details>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="footer-inner container">
+      <div class="foot-credits">
+        Built by <a href="https://x.com/pdotal" target="_blank" rel="noopener">pdot</a>
+        for <a href="https://x.com/daedalus_angels" target="_blank" rel="noopener">Daedalus Angels</a>
+      </div>
+      <div class="foot-right">
+        <a class="foot-link" href="#" title="Back to top">Back to the top ↑</a>
+      </div>
+    </div>
+  </footer>
 
   <!-- CSV parser (global Papa) -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
