--- a/index.html
+++ b/index.html
@@ -9,50 +9,87 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/styles.css">
   <style>
-    /* hide legacy controls safely so JS can still find the nodes */
-    .hidden-compat { display:none !important; }
-    /* tiny gap between search and sort pills if needed */
-    .filters { gap: 10px; }
+    /* ===== Sidebar layout (additive to your existing CSS) ===== */
+    :root{ --sidebar-w: 280px; }
 
-    /* --- Footer (center content, pull button in from edge) --- */
+    body { overflow-x: hidden; }
+
+    /* Sidebar shell */
+    .sidebar{
+      position: fixed;
+      inset: 0 auto 0 0;           /* top:0; bottom:0; left:0 */
+      width: var(--sidebar-w);
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      padding: 18px 16px;
+      background:
+        radial-gradient(700px 400px at 20% -10%, rgba(255,255,255,.06), transparent 50%),
+        radial-gradient(700px 400px at 80% -20%, rgba(255,255,255,.04), transparent 50%),
+        var(--bg);
+      border-right: 1px solid rgba(255,255,255,.06);
+      z-index: 20;
+    }
+
+    /* Brand at top of sidebar */
+    .side-brand{
+      display:flex; flex-direction:column; gap:10px;
+    }
+    .side-brand .brandline{ align-items:center; gap:12px; }
+    .side-brand .wordlogo{ height: var(--logo-height-sm); max-width: 100%; }
+    .side-brand .tag{ margin:0; color:#bdbdbd; font-size:11px; letter-spacing:1.2px; }
+
+    /* Controls in sidebar */
+    .sidebar .filters{
+      display: flex !important;
+      flex-direction: column;
+      gap: 10px;
+      padding: 0;
+    }
+    .sidebar .control{ width:100%; }
+    .control-sort svg{ flex:0 0 auto; }
+
+    /* Main & footer shift right to make room for sidebar */
+    .with-sidebar { margin-left: var(--sidebar-w); }
+    .site-footer { margin-left: var(--sidebar-w); }
+
+    /* Back to top pill nudge (reuse your earlier footer styles) */
     .site-footer{ border-top:1px solid rgba(255,255,255,.06); background:var(--bg); margin-top:24px; }
     .footer-inner{
-      position: relative;                      /* allows absolute positioning of the button */
-      display:flex; align-items:center;
-      justify-content:center;                  /* center the credits */
-      gap:12px; padding:18px 24px;
-      color:#bdbdbd; font-size:12px;
+      position: relative;
+      display:flex; align-items:center; justify-content:center;
+      gap:12px; padding:18px 24px; color:#bdbdbd; font-size:12px;
     }
-    .foot-credits{
-      text-align:center; color:#dcdcdc; font-weight:600; letter-spacing:.2px;
-    }
-    .foot-credits a{
-      color:#ffffff; text-decoration:underline; text-underline-offset:3px;
-    }
-    .foot-credits a:hover{ opacity:.9; }
-
     .foot-link{
       color:#dcdcdc; text-decoration:none;
-      border:1px solid rgba(255,255,255,.18);
-      padding:6px 10px; border-radius:999px;
+      border:1px solid rgba(255,255,255,.18); padding:6px 10px; border-radius:999px;
       backdrop-filter: blur(4px);
     }
     .foot-link:hover{ background:rgba(255,255,255,.06); }
-    .foot-right{
-      position:absolute; right:56px;           /* inset the pill from the edge */
-      top:50%; transform: translateY(-50%);    /* vertically center inside footer */
+    .foot-right{ position:absolute; right:56px; top:50%; transform:translateY(-50%); }
+    @media (max-width:640px){ .foot-right{ right:16px; } }
+
+    /* Responsive: collapse sidebar to top bar on small screens */
+    @media (max-width: 900px){
+      :root{ --sidebar-w: 0px; }
+      .sidebar{
+        position: sticky; top:0; width:100%;
+        flex-direction: column;
+        border-right: none; border-bottom: 1px solid rgba(255,255,255,.06);
+      }
+      .with-sidebar, .site-footer { margin-left: 0; }
     }
-    @media (max-width:640px){
-      .footer-inner{ padding:16px; }
-      .foot-right{ right:16px; }
-    }
+
+    /* Keep legacy controls hidden so JS can still find nodes */
+    .hidden-compat{ display:none !important; }
   </style>
+  
 </head>
 <body>
 
-  <!-- Brand hero (monochrome). Set your banner/logo files in /assets -->
-  <header class="site-header" style="--hero-url:url('./assets/brand-hero.jpg')">
-    <div class="hero">
+  <!-- ===== Sidebar (brand + controls) ===== -->
+  <aside class="sidebar">
+    <div class="side-brand">
       <div class="brandline">
         <img class="brandmark" src="./assets/brand-mark.png" alt="Daedalus" onerror="this.style.display='none'">
         <img class="wordlogo" src="./assets/daedalus-logo.png" alt="Daedalus logo" />
@@ -60,9 +97,9 @@
       <p class="tag">Crypto Card Ranker</p>
     </div>
 
-    <!-- Filters: Search + Sort visible; all other controls kept hidden for JS compatibility -->
+    <!-- Search + Sort (IDs unchanged for JS) -->
     <div class="filters">
-      <!-- search (visible) -->
+      <!-- search -->
       <div class="control control-search">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
           <path d="M21 21l-4.3-4.3" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
@@ -71,7 +108,7 @@
         <input id="search" placeholder="Search cards, issuers, countries…" />
       </div>
 
-      <!-- sort (visible) -->
+      <!-- sort -->
       <div class="control control-sort">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
           <path d="M6 4v14m0 0l-3-3m3 3l3-3M18 20V6m0 0l3 3m-3-3l-3 3"
@@ -88,29 +125,26 @@
       <button class="btn ghost hidden-compat" id="runTests" title="Run built-in tests">Tests</button>
       <a id="sheetLink" class="meta link-quiet hidden-compat" target="_blank" rel="noopener">Sheet ↗</a>
     </div>
-  </header>
+  </aside>
 
-  <main class="container">
+  <!-- ===== Main content ===== -->
+  <main class="container with-sidebar">
     <div id="grid" class="grid" aria-live="polite"></div>
     <div id="empty" class="empty" style="display:none;">No cards match your filters.</div>
     <div id="error" class="error" style="display:none;">Couldn't load the sheet. Check the publish link or CORS settings.</div>
   </main>
 
-  <!-- diagnostics kept but hidden so setDiag() doesn’t fail -->
-  <details class="diag hidden-compat">
-    <summary>Diagnostics</summary>
-    <pre id="diag"></pre>
-  </details>
-
-  <!-- Footer -->
+  <!-- ===== Footer ===== -->
   <footer class="site-footer">
     <div class="footer-inner container">
-      <div class="foot-credits">
-        Built by <a href="https://x.com/pdotal" target="_blank" rel="noopener">pdot</a>
-        for <a href="https://x.com/daedalus_angels" target="_blank" rel="noopener">Daedalus Angels</a>
+      <div class="foot-left" style="text-align:center;">
+        <span style="opacity:.9">Built by</span>
+        <a href="https://x.com/pdotal" target="_blank" rel="noopener" class="foot-link" style="margin:0 6px;">pdot</a>
+        <span style="opacity:.9">for</span>
+        <a href="https://x.com/daedalus_angels" target="_blank" rel="noopener" class="foot-link" style="margin-left:6px;">Daedalus&nbsp;Angels</a>
       </div>
       <div class="foot-right">
-        <a class="foot-link" href="#" title="Back to top">Back to the top ↑</a>
+        <a class="foot-link" href="#" title="Back to top" onclick="window.scrollTo({top:0,behavior:'smooth'})">Back to the top ↑</a>
       </div>
     </div>
   </footer>
